--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "colors": "^1.1.2",
     "esprima": "^3.1.3",
     "require": "^2.4.20"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0"
   }
 }
