--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Finds Islands of Knowledge in Node Git Repositories",
   "main": "analyze",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Marco Brack",
   "license": "ISC",
