--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "repository": "https://github.com/turbopope/node-island-finder",
   "dependencies": {
     "colors": "^1.1.2",
+    "csv": "^1.1.1",
     "esprima": "^3.1.3",
-    "require": "^2.4.20"
+    "lodash": "^4.17.4",
+    "require": "^2.4.20",
+    "sync-request": "^4.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
