--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "esprima": "^3.1.3",
     "lodash": "^4.17.4",
     "require": "^2.4.20",
+    "sanitize-filename": "^1.6.1",
     "sync-request": "^4.0.1"
   },
   "devDependencies": {
