--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "colors": "^1.1.2",
     "csv": "^1.1.1",
     "esprima": "^3.1.3",
+    "left-pad": "^1.1.3",
     "lodash": "^4.17.4",
     "require": "^2.4.20",
     "sanitize-filename": "^1.6.1",
