--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csv": "^1.1.1",
     "d3": "^4.5.0",
     "esprima": "^3.1.3",
+    "get-stdin": "^5.0.1",
     "left-pad": "^1.1.3",
     "lodash": "^4.17.4",
     "require": "^2.4.20",
