--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "repository": "https://github.com/turbopope/node-island-finder",
   "dependencies": {
     "colors": "^1.1.2",
+    "command-exists": "^1.2.2",
     "csv": "^1.1.1",
     "d3": "^4.5.0",
     "esprima": "^3.1.3",
