Move executables int bin/folder

--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "node-island-finder",
   "version": "1.0.0",
   "description": "Finds Islands of Knowledge in Node Git Repositories",
-  "main": "index",
   "scripts": {
     "test": "mocha",
-    "analyze": "./analyze",
-    "analyze_history": "./analyze_history",
-    "condense": "./condense",
-    "index": "./index",
-    "keywords": "./keywords",
-    "modulesToKeywords": "./modulesToKeywords",
-    "parse": "./parse",
-    "report": "./report",
-    "tabelize": "./tabelize",
-    "track_author": "./track_author",
-    "track_module": "./track_module"
+    "analyze": "./bin/analyze",
+    "analyze_history": "./bin/analyze_history",
+    "condense": "./bin/condense",
+    "index": "./bin/index",
+    "keywords": "./bin/keywords",
+    "modulesToKeywords": "./bin/modulesToKeywords",
+    "parse": "./bin/parse",
+    "report": "./bin/report",
+    "tabelize": "./bin/tabelize",
+    "track_author": "./bin/track_author",
+    "track_module": "./bin/track_module"
   },
   "author": "Marco Brack",
   "license": "ISC",
