--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "get-stdin": "^5.0.1",
     "left-pad": "^1.1.3",
     "lodash": "^4.17.4",
+    "node-idman": "^1.0.2",
     "progress": "^1.1.8",
     "pug": "^2.0.0-beta11",
     "require": "^2.4.20",
